--- a/_data/pi.yml
+++ b/_data/pi.yml
@@ -4,6 +4,7 @@
   email: adisun@umich.edu
   github: https://github.com/adisun94
   scholar: https://scholar.google.com/citations?user=k-nqUdgAAAAJ&hl=en&authuser=1
+  linkedin: https://scholar.google.com/citations?user=k-nqUdgAAAAJ&hl=en&authuser=1
   cv: cv/cv.pdf
   education1: (2021- ) Assistant Professor of <a href="https://cse.gatech.edu/" target="_blank">CSE</a>, Georgia Tech
   education2: (2018-21) Senior Postdoc, Caltech (with <a href="https://colonius.caltech.edu" target="_blank">Tim Colonius</a>)
