--- a/_data/pi.yml
+++ b/_data/pi.yml
@@ -1,7 +1,7 @@
 - name: Aditya Sundar
   photo: Aditya.jpg
-  info: <i>Ph.D student in Materials Science</i>
-  email: adisun@umich.edu
+  info: <i>Postdoctoral Researcher in Materials Science</i>
+  email: asundar@anl.gov
   github: https://github.com/adisun94
   scholar: https://scholar.google.com/citations?user=k-nqUdgAAAAJ&hl=en&authuser=1
   linkedin: https://scholar.google.com/citations?user=k-nqUdgAAAAJ&hl=en&authuser=1
