--- a/_config.yml
+++ b/_config.yml
@@ -122,7 +122,7 @@ nav_pages:
   - name: experience 
 # - name: team
   - name: publications
-# - name: research
+  - name: research
 # - name: software
   - name: projects
 # - name: about
