added linkedin scholar CV

--- a/_data/pi.yml
+++ b/_data/pi.yml
@@ -1,11 +1,11 @@
 - name: Aditya Sundar
   photo: Aditya.jpg
-  info: <i>Postdoctoral Researcher in Materials Science</i>
-  email: asundar@anl.gov
+  info: <i>Computational Materials Scientist</i>
+  email: aditya.1094@gmail.com
   github: https://github.com/adisun94
-  scholar: https://scholar.google.com/citations?user=k-nqUdgAAAAJ&hl=en&authuser=1
-  linkedin: https://scholar.google.com/citations?user=k-nqUdgAAAAJ&hl=en&authuser=1
-  cv: cv/cv.pdf
+  scholar: https://scholar.google.com/citations?hl=en&user=k-nqUdgAAAAJ&view_op=list_works
+  linkedin: https://www.linkedin.com/in/adisun10/
+  cv: cv/AdityaSundar_CV_2025.pdf
   education1: (2021- ) Assistant Professor of <a href="https://cse.gatech.edu/" target="_blank">CSE</a>, Georgia Tech
   education2: (2018-21) Senior Postdoc, Caltech (with <a href="https://colonius.caltech.edu" target="_blank">Tim Colonius</a>)
   education3: (2019) Visiting Researcher, MIT (with <a href="http://sandlab.mit.edu" target="_blank">Themis Sapsis</a>)
